# typethon

./: .env  .gitignore  DEVELOPMENT.md  README.md  biome.json  init-python-envs.sh  package.json  pnpm-lock.yaml  python-api.code-workspace  requirements.txt  specification.md  turbo.json
.cursor/rules/: api-client-usage.mdc  architecture.mdc
api/: schemas.py
apps/core/: .flake8  .gitignore  DEVELOPMENT.md  README.md  main.py  package.json  pyproject.toml  requirements.txt  run-dev.sh  setup.py
apps/core/api/: endpoints.py  schemas.py
apps/core/core/: config.py
apps/core/lib/: __init__.py
apps/core/lib/cache/: redis.py
apps/core/lib/database/: __init__.py  connection.py
apps/core/lib/messaging/: __init__.py  email.py
apps/core/lib/storage/: __init__.py  file_storage.py
apps/core/models/: __init__.py  chat_model.py  user_model.py
apps/core/operations/: __init__.py  chat_repository.py  transaction_repo.py  user_repository.py
apps/core/services/: __init__.py  ai_service.py  auth_service.py  chat_service.py  user_service.py
apps/core/tests/: test_api.py  test_architecture.py
apps/web/: package.json  tsconfig.json
core/: config.py
lib/cache/: __init__.py
lib/database/: __init__.py  connection.py
lib/messaging/: email.py
models/: base.py  user_model.py
my_project/: .env  DEVELOPMENT.md  Dockerfile  README.md  main.py
my_project/api/: schemas.py
my_project/core/: config.py
my_project/models/: user_model.py
operations/: db_operations.py  user_repository.py
services/: user_service.py
tests/: test_api.py  test_architecture.py
(+8 files in other folders)
